[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/Score2.gd" type="Script" id=1]
[ext_resource path="res://scripts/VolleyBall.gd" type="Script" id=2]
[ext_resource path="res://scripts/Score.gd" type="Script" id=4]
[ext_resource path="res://Sprites/background.jpg" type="Texture" id=6]
[ext_resource path="res://Sprites/tree1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/scoreboard.png" type="Texture" id=8]
[ext_resource path="res://Sprites/simpleBall.png" type="Texture" id=9]
[ext_resource path="res://Sprites/icon.png" type="Texture" id=10]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 972.461, 12.6277 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 480, 15.0841 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 48.2036
height = 265.159

[sub_resource type="PhysicsMaterial" id=6]
bounce = 0.85

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.550388, 0.775194, 1 )
colors = PoolColorArray( 1, 1, 1, 0.807843, 0.467285, 0.456333, 0.456333, 0.211765, 0.407843, 0.396078, 0.396078, 0.160784 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.07
color_ramp = SubResource( 8 )

[sub_resource type="CircleShape2D" id=10]
radius = 54.8793

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.317829, 0.604651, 0.868217 )
colors = PoolColorArray( 0.976471, 0.478431, 0.0196078, 1, 0.972549, 0.0313726, 0.0313726, 1, 0.996078, 0.698039, 0.0392157, 1, 0.991621, 0.754505, 0.0466453, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )
width = 10

[sub_resource type="ParticlesMaterial" id=13]
lifetime_randomness = 0.63
emission_shape = 1
emission_sphere_radius = 46.16
flag_disable_z = true
spread = 12.35
gravity = Vector3( 0, 0, 0 )
initial_velocity = 81.4
initial_velocity_random = 0.73
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -46.51
scale = 10.0
color_ramp = SubResource( 12 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 11.1678, 554.148 )

[sub_resource type="DynamicFont" id=15]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=16]
size = 50
outline_size = 3
outline_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 12 )

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 9.91838e-39, 0.372093, 0.589147, 0.806202, 1, 1.18347e+07 )
colors = PoolColorArray( 0.0470588, 0.905882, 0.160784, 1, 0.0588235, 0.156863, 0.972549, 1, 0.843137, 0.215686, 0.133333, 1, 0.903551, 0.587705, 0.107896, 1, 0.917647, 0.67451, 0.101961, 1, 0.917647, 0.67451, 0.101961, 1, 0.898039, 0.054902, 0.968627, 1 )

[sub_resource type="GradientTexture" id=18]
gradient = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=19]
emission_shape = 2
emission_box_extents = Vector3( 200, 100, 0 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity_random = 0.59
angular_velocity = 217.67
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 24.26
scale_random = 0.43
color_ramp = SubResource( 18 )

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 0, 0.426357, 0.635659, 1 )
colors = PoolColorArray( 0.931641, 0.0764236, 0.266843, 1, 0.986328, 0.0577927, 0.939176, 1, 0.118664, 0.0594482, 0.951172, 1, 0.0636826, 0.927509, 0.958984, 1 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=22]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 251.81
initial_velocity_random = 1.0
angular_velocity = 117.21
angular_velocity_random = 0.44
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 12.62
color_ramp = SubResource( 21 )

[node name="Game" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 3.578
margin_top = 2.79568
margin_right = 1923.58
margin_bottom = 1082.8
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scoreboard" type="Sprite" parent="."]
position = Vector2( 938.761, 190.705 )
scale = Vector2( 0.420352, 0.40214 )
texture = ExtResource( 8 )

[node name="Score1" type="Label" parent="."]
margin_left = 809.047
margin_top = 230.03
margin_right = 850.047
margin_bottom = 266.03
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="."]
margin_left = 1042.52
margin_top = 229.505
margin_right = 1079.52
margin_bottom = 265.505
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2( 779.547, 805.854 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2( 180.203, 268.303 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="floor"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 176.421, 261.893 )
scale = Vector2( 29.374, 0.406857 )
texture = ExtResource( 10 )

[node name="pisoizq" type="Area2D" parent="floor"]
position = Vector2( -331.547, 268.303 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor/pisoizq"]
shape = SubResource( 4 )

[node name="pisoder" type="Area2D" parent="floor"]
position = Vector2( 628.453, 268.303 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor/pisoder"]
shape = SubResource( 4 )

[node name="wall2" type="StaticBody2D" parent="."]
position = Vector2( 741.677, -271.194 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
position = Vector2( 180.203, 268.303 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="wall2"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 208.681, 261.098 )
scale = Vector2( 29.874, 0.532508 )
texture = ExtResource( 10 )

[node name="Net" type="StaticBody2D" parent="."]
position = Vector2( 928.237, 915.81 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Net"]
position = Vector2( 0, 26 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Net"]
position = Vector2( 1.58916, -16.9515 )
scale = Vector2( 9.26381, 14.2025 )
texture = ExtResource( 7 )

[node name="Ball" type="RigidBody2D" parent="." groups=[
"pelota",
]]
position = Vector2( 959.766, 196.701 )
physics_material_override = SubResource( 6 )
gravity_scale = 4.0
script = ExtResource( 2 )
max_points10 = 5

[node name="pelotas" type="Particles2D" parent="Ball"]
emitting = false
amount = 6
lifetime = 0.2
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="Ball"]

[node name="volley-ball" type="Sprite" parent="Ball/Sprite"]
position = Vector2( 0.155048, 2.43371 )
scale = Vector2( 0.0712753, 0.0708853 )
texture = ExtResource( 9 )

[node name="fuegoPelota2" type="Particles2D" parent="Ball"]
position = Vector2( -0.381592, 0.0411377 )
emitting = false
amount = 500
lifetime = 0.2
local_coords = false
process_material = SubResource( 13 )

[node name="walls" type="StaticBody2D" parent="."]
position = Vector2( 0, 982.33 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2( 0, -449.346 )
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="walls"]
modulate = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
show_behind_parent = true
position = Vector2( 0, -446.575 )
scale = Vector2( 0.5, 16.7423 )
texture = ExtResource( 10 )

[node name="walls2" type="StaticBody2D" parent="."]
position = Vector2( 1911.94, 982.33 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls2"]
position = Vector2( 0, -449.346 )
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="walls2"]
modulate = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
show_behind_parent = true
position = Vector2( 0.746338, -458.464 )
scale = Vector2( 0.5, 17.1139 )
texture = ExtResource( 10 )

[node name="sacaDer" type="Position2D" parent="."]
position = Vector2( 930, 400 )

[node name="sacaIzq" type="Position2D" parent="."]
position = Vector2( 920, 400 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 955.02, 521.607 )
current = true
zoom = Vector2( 2, 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="winnerIzq" type="RichTextLabel" parent="CanvasLayer"]
visible = false
anchor_left = 0.489
anchor_top = 0.5
anchor_right = 0.489
anchor_bottom = 0.5
margin_left = -212.115
margin_top = -142.367
margin_right = 235.885
margin_bottom = -13.3669
custom_fonts/normal_font = SubResource( 15 )
bbcode_enabled = true
bbcode_text = "Jugador de la izquierda gano!"
text = "Jugador de la izquierda gano!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="winnerDer" type="RichTextLabel" parent="CanvasLayer"]
visible = false
margin_left = 746.0
margin_top = 396.0
margin_right = 1259.0
margin_bottom = 534.0
custom_fonts/normal_font = SubResource( 16 )
bbcode_text = "Ganó el jugador de la derecha!
"
text = "Ganó el jugador de la derecha!
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="Particles2D" parent="."]
position = Vector2( 933.817, 598.125 )
emitting = false
amount = 200
lifetime = 2.0
preprocess = 1.0
process_material = SubResource( 19 )

[node name="explosion" type="Particles2D" parent="."]
position = Vector2( 959.704, 200 )
emitting = false
amount = 1200
one_shot = true
local_coords = false
process_material = SubResource( 22 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Positions" type="Node2D" parent="."]

[node name="jugador1" type="Position2D" parent="Positions"]
position = Vector2( 400.072, 981.641 )

[node name="jugador2" type="Position2D" parent="Positions"]
position = Vector2( 1429.39, 982.89 )

[node name="Players" type="Node2D" parent="."]

[connection signal="body_entered" from="floor/pisoizq" to="Ball" method="_on_pisoizq_body_entered"]
[connection signal="body_entered" from="floor/pisoder" to="Ball" method="_on_pisoder_body_entered"]
